Made the ISS api web page

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -6,10 +6,10 @@
     <title>ISS Live Location API - Michael Grigoryan</title>
 </head>
 <body>
-    <pre>
-        <code lang="json">
-            <%= data %>
-        </code>
-    </pre>
+    <div id="container">
+
+        
+    </div>
+    <script src="/js/issAPIWeb/script.js"></script>
 </body>
 </html>
