--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -7,8 +7,14 @@
 </head>
 <body>
     <div id="container">
+        <label for="#longitude">Longitude</label>
+        <div id="longitude">
 
-        
+        </div>
+        <label for="#latitude">Latitude</label>
+        <div id="latitude">
+
+        </div>
     </div>
     <script src="/js/issAPIWeb/script.js"></script>
 </body>
