Removed obfuscated files

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -16,6 +16,6 @@
 
         </div>
     </div>
-    <script src="/js/issAPIWeb/script.obfuscated.min.js"></script>
+    <script src="/js/issAPIWeb/script.min.js"></script>
 </body>
 </html>
