Updated the EJS file

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -33,11 +33,8 @@
         </pre>
 
       <br />
-      <label for="#message">Message:&nbsp;</label>
-      <pre>
-            <span id="message"></span>
-        </pre>
 
+      <!-- API Status -->
       <br />
       <label for="#status">API Status:&nbsp;</label>
       <pre>
