--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
       rel="stylesheet"
     />
-    <link rel="SHORTCUT ICON" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
     <title>ISS Live Location API - Michael Grigoryan</title>
   </head>
