Added a random number API

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -42,6 +42,6 @@
             <span id="status"></span>
         </pre>
     </div>
-    <script src="/js/issAPIWeb/script.js"></script>
+    <script src="/js/issAPIWeb/script.min.js"></script>
   </body>
 </html>
