Updated the doc and made minor improvements

--- a/views/randomNumberAPIWeb.ejs
+++ b/views/randomNumberAPIWeb.ejs
@@ -34,6 +34,6 @@
             <span id="status"></span>
         </pre>
     </div>
-    <script src="/js/randomNumberAPIWeb/script.js"></script>
+    <script src="/js/randomNumberAPIWeb/script.min.js"></script>
   </body>
 </html>
