Added footer and formatted the code

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -43,5 +43,6 @@
         </pre>
     </div>
     <script src="/js/issAPIWeb/script.min.js"></script>
+    <%- include ("./partials/footer") %>
   </body>
 </html>
