--- a/views/randomNumberAPIWeb.ejs
+++ b/views/randomNumberAPIWeb.ejs
@@ -35,5 +35,7 @@
         </pre>
     </div>
     <script src="/js/randomNumberAPIWeb/script.min.js"></script>
+
+    <%- include ("./partials/footer") %>
   </body>
 </html>
