--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,16 @@
-<footer style="position: absolute;bottom: 0;">
-    <p>View the project hosted on <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a></p>
+<footer
+style="
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 5px;
+  width: 100em;
+"
+>
+<p>
+  View the project hosted on
+  <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a>
+</p>
 </footer>
