--- a/public/css/issAPIWeb/style.css
+++ b/public/css/issAPIWeb/style.css
@@ -1,4 +1,9 @@
-body {
+body, html {
+  max-width: 100;
+  height: 100;
+  width: 100;
+  margin: 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,11 +19,9 @@ body {
   font-family: "Source Code Pro", monospace;
 }
 
-.container {
-  position: fixed;
-}
-
 #map {
-  height: 100%;
+  height: 80%;
+  margin-right: 20px;
+  margin-top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
