--- a/public/css/issAPIWeb/style.scss
+++ b/public/css/issAPIWeb/style.scss
@@ -1,4 +1,9 @@
-body {
+body, html {
+  max-width: 100;
+  height: 100;
+  width: 100;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -6,11 +11,8 @@ body {
   text-align: center;
   font-family: "Source Code Pro", monospace;
 }
-
-.container {
-    position: fixed;
-}
-
 #map {
-  height: 100%;
+  height: 80%;
+  margin-right: 20px;
+  margin-top: 10px;
 }
