--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
     <title>ISS Live Location API - Michael Grigoryan</title>
   </head>
@@ -42,7 +42,87 @@
             <span id="status"></span>
         </pre>
     </div>
-    <script src="/js/issAPIWeb/script.min.js"></script>
+
+    <div style="position: absolute; width: 50%; top: 0; right: 0; height: 100%;">
+      <div id="map"></div>
+    </div>
+
     <%- include ("./partials/footer") %>
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAg2ArSsIdvnBxfmtjy8ZukBgUX1GJwQtI&callback=initMap"
+    ></script>
+    <script>
+      
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 4,
+          mapTypeId: "satellite",
+        });
+
+        var marker = new google.maps.Marker({
+          map: map,
+          title: "Live ISS Location",
+          icon: {
+            url:
+              "http://www.i2clipart.com/cliparts/9/1/8/b/clipart-international-space-station-918b.png",
+            scaledSize: { width: 64, height: 64 },
+            anchor: { x: 64 / 4, y: 64 / 4 },
+          },
+        });
+
+        updateMap(map, marker);
+        setInterval(() => {
+          updateMap(map, marker);
+        }, reqSpeed);
+
+        // Get current location --> Promise
+        function updateMap(map, marker) {
+          getISSLocation().then((location) => {
+            map.setCenter(location);
+            marker.setPosition(location);
+          });
+        }
+      }
+
+      // For fetch implementation in Google Maps
+      function fetchAPI() {
+        const address = "https://maps.googleapis.com/maps/api/js?key=";
+        const key = "AIzaSyAg2ArSsIdvnBxfmtjy8ZukBgUX1GJwQtI";
+        const callbackToGoogle = "&callback=initMap";
+        return address + key + callbackToGoogle;
+      }
+
+      function getISSLocation() {
+        return new Promise((resolve, reject) => {
+          let XHR = new XMLHttpRequest();
+
+          XHR.open("GET", "http://api.michaelgrigoryan.com/iss-api");
+          XHR.onload = function () {
+            let location = {};
+            if (XHR.readyState === 4 && XHR.status === 200) {
+              let latitude = JSON.parse(
+                XHR.responseText
+              ).details.iss_position.latitude
+              let longitude = JSON.parse(
+                XHR.responseText
+              ).details.iss_position.longitude
+
+              location = {
+                lat: Number(latitude),
+                lng: Number(longitude),
+              };
+              resolve(location);
+              console.log(location)
+            } else {
+              reject(XHR.statusText);
+            }
+          };
+          XHR.send();
+        });
+      }
+    </script>
+    <script src="/js/issAPIWeb/script.min.js"></script>
   </body>
 </html>
