--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -58,7 +58,7 @@
         margin-left: 25px;
       "
     >
-      The data updates every one second
+      The data updates every 10 seconds
     </h6>
 
     <script
