--- a/public/css/issAPIWeb/style.css
+++ b/public/css/issAPIWeb/style.css
@@ -21,7 +21,12 @@ body, html {
 
 #map {
   height: 80%;
-  margin-right: 20px;
+  margin-right: 10px;
   margin-top: 10px;
+}
+
+#container {
+  margin-top: 10px;
+  margin-left: 10px;
 }
 /*# sourceMappingURL=style.css.map */
