--- a/public/css/issAPIWeb/style.scss
+++ b/public/css/issAPIWeb/style.scss
@@ -13,6 +13,10 @@ body, html {
 }
 #map {
   height: 80%;
-  margin-right: 20px;
+  margin-right: 10px;
   margin-top: 10px;
+}
+#container {
+  margin-top: 10px;
+  margin-left: 10px;
 }
