--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -7,6 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
     <title>ISS Live Location API - Michael Grigoryan</title>
@@ -14,21 +19,22 @@
   <body>
     <div id="container">
       <!-- Longitude -->
-      <label for="#longitude">Longitude:&nbsp;</label>
+      <label for="#longitude">Longitude</label>
       <pre>
             <span id="longitude"></span>
         </pre>
       <br />
 
       <!-- Latitude -->
-      <label for="#latitude">Latitude:&nbsp;</label>
+      <label for="#latitude">Latitude</label>
       <pre>
             <span id="latitude"></span>
         </pre>
+
       <br />
 
       <!-- Timestamp -->
-      <label for="#timestamp">Timestamp:&nbsp;</label>
+      <label for="#timestamp">Timestamp</label>
       <pre>
             <span id="timestamp"></span>
         </pre>
@@ -36,10 +42,9 @@
       <br />
 
       <!-- API Status -->
-      <br />
-      <label for="#status">API Status:&nbsp;</label>
+      <label for="#status">API Status</label>
       <pre>
-            <span id="status"></span>
+              <span id="status"></span>
         </pre>
     </div>
 
@@ -58,79 +63,65 @@
         margin-left: 25px;
       "
     >
-      The data updates every 10 seconds
+      The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
     </h6>
 
-    <script
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAg2ArSsIdvnBxfmtjy8ZukBgUX1GJwQtI&callback=initMap"
-    ></script>
     <script>
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 4,
-          mapTypeId: "satellite",
-        });
+      console.log("%cConnected to the Server", "color: lightgreen");
 
-        var marker = new google.maps.Marker({
-          map: map,
-          title: "Live ISS Location",
-          icon: {
-            url:
-              "http://www.i2clipart.com/cliparts/9/1/8/b/clipart-international-space-station-918b.png",
-            scaledSize: { width: 64, height: 64 },
-            anchor: { x: 64 / 4, y: 64 / 4 },
-          },
-        });
+      const longitudeSp = document.getElementById("longitude");
+      const latitudeSp = document.getElementById("latitude");
+      const timestampSp = document.getElementById("timestamp");
+      const apiStatusContSp = document.getElementById("status");
 
-        updateMap(map, marker);
-        setInterval(() => {
-          updateMap(map, marker);
-        }, 10000);
+      // Set the initial location of the marker (0,0) with zoom of 4
+      const map = L.map("map").setView([0, 0], 4);
 
-        // Get current location --> Promise
-        function updateMap(map, marker) {
-          getISSLocation().then((location) => {
-            map.setCenter(location);
-            marker.setPosition(location);
-          });
+      // Set the icon for the ISS
+      const icon = L.icon({
+        iconUrl: "/img/iss.svg",
+        iconSize: [84, 84],
+      });
+
+      // Create a marker constant
+      const marker = L.marker([0, 0], { icon: icon }).addTo(map);
+
+      // Add the OpenStreetMap tiles
+      L.tileLayer(
+        "https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
+        {
+          maxZoom: 19,
+          attribution:
+            '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+          subdomains: "abcd",
         }
+      ).addTo(map);
+
+      async function getISS() {
+        // Make an async request to the API
+        var response = await fetch("/iss-api");
+
+        // Await JSON data
+        var data = await response.json();
+
+        // Set and convert lat and lng to Num type
+        var latitude = Number(data.details.iss_position.latitude);
+        var longitude = Number(data.details.iss_position.longitude);
+
+        latitudeSp.innerHTML = latitude;
+        longitudeSp.innerHTML = longitude;
+        timestampSp.innerHTML = Number(data.details.timestamp);
+        apiStatusContSp.innerHTML = data.apiStatus;
+
+        // Recenter the ISS marker every time it changes positions
+        map.flyTo([latitude, longitude], 4);
+
+        // Set the lat and lng every time they change
+        marker.setLatLng([latitude, longitude]);
       }
 
-      // For fetch implementation in Google Maps
-      function fetchAPI() {
-        const address = "https://maps.googleapis.com/maps/api/js?key=";
-        const key = "AIzaSyAg2ArSsIdvnBxfmtjy8ZukBgUX1GJwQtI";
-        const callbackToGoogle = "&callback=initMap";
-        return address + key + callbackToGoogle;
-      }
-
-      function getISSLocation() {
-        return new Promise((resolve, reject) => {
-          let XHR = new XMLHttpRequest();
-
-          XHR.open("GET", "/iss-api");
-          XHR.onload = function () {
-            let location = {};
-            if (XHR.readyState === 4 && XHR.status === 200) {
-              let latitude = JSON.parse(XHR.responseText).details.iss_position
-                .latitude;
-              let longitude = JSON.parse(XHR.responseText).details.iss_position
-                .longitude;
-
-              location = {
-                lat: Number(latitude),
-                lng: Number(longitude),
-              };
-              resolve(location);
-            } else {
-              reject(XHR.statusText);
-            }
-          };
-          XHR.send();
-        });
-      }
+      // Auto update every 10 seconds
+      setInterval(getISS, 10000);
     </script>
-    <script src="/js/issAPIWeb/script.min.js"></script>
   </body>
 </html>
