--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -21,14 +21,14 @@
       <!-- Longitude -->
       <label for="#longitude">Longitude</label>
       <pre>
-            <span id="longitude"></span>
+            <span id="longitude">Loading...</span>
         </pre>
       <br />
 
       <!-- Latitude -->
       <label for="#latitude">Latitude</label>
       <pre>
-            <span id="latitude"></span>
+            <span id="latitude">Loading...</span>
         </pre>
 
       <br />
@@ -36,7 +36,7 @@
       <!-- Timestamp -->
       <label for="#timestamp">Timestamp</label>
       <pre>
-            <span id="timestamp"></span>
+            <span id="timestamp">Loading...</span>
         </pre>
 
       <br />
@@ -44,13 +44,16 @@
       <!-- API Status -->
       <label for="#status">API Status</label>
       <pre>
-              <span id="status"></span>
+              <span id="status">Loading...</span>
         </pre>
     </div>
 
     <br />
 
-    <div style="position: absolute; width: 50%; top: 0; right: 0; height: 100%">
+    <div
+      id="map-container"
+      style="position: absolute; width: 50%; top: 0; right: 0; height: 100%"
+    >
       <div id="map"></div>
     </div>
 
@@ -66,8 +69,25 @@
       The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
     </h6>
 
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script>
+      
       console.log("%cConnected to the Server", "color: lightgreen");
+      
+      function sleep(ms) {
+        return new Promise(resolve => setTimeout(resolve, ms));
+      }
+
+      async function hideMap() {
+        $("#map").hide();
+        await sleep(10000)
+        $("#map").show();
+      }
+      hideMap();
 
       const longitudeSp = document.getElementById("longitude");
       const latitudeSp = document.getElementById("latitude");
