--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -69,6 +69,7 @@
       The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
     </h6>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
       
       console.log("%cConnected to the Server", "color: lightgreen");
