--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -69,30 +69,19 @@
       The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
     </h6>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
       const longitudeSp = document.getElementById("longitude");
       const latitudeSp = document.getElementById("latitude");
       const timestampSp = document.getElementById("timestamp");
       const apiStatusContSp = document.getElementById("status");
 
-      function sleep(ms) {
-        return new Promise(resolve => setTimeout(resolve, ms));
-      }
-
-      async function hideMap() {
-        $("#map").hide();
-        await sleep(10000)
-        $("#map").show();
-      }
-      hideMap();
-
       // Set the initial location of the marker (0,0) with zoom of 4
-      const map = L.map("map").setView([0, 0], 4);
+      const map = L.map("map").setView([0, 0], 7);
 
       // Set the icon for the ISS
       const icon = L.icon({
-        iconUrl: "/img/iss.svg",
+        iconUrl:
+          "https://upload.wikimedia.org/wikipedia/commons/d/d0/International_Space_Station.svg",
         iconSize: [84, 84],
       });
 
@@ -100,15 +89,11 @@
       const marker = L.marker([0, 0], { icon: icon }).addTo(map);
 
       // Add the OpenStreetMap tiles
-      L.tileLayer(
-        "https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-        {
-          maxZoom: 19,
-          attribution:
-            '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-          subdomains: "abcd",
-        }
-      ).addTo(map);
+      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+        maxZoom: 19,
+        attribution:
+          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+      }).addTo(map);
 
       async function getISS() {
         // Make an async request to the API
@@ -127,7 +112,7 @@
         apiStatusContSp.innerHTML = data.apiStatus;
 
         // Recenter the ISS marker every time it changes positions
-        map.flyTo([latitude, longitude], 4);
+        map.flyTo([latitude, longitude]);
 
         // Set the lat and lng every time they change
         marker.setLatLng([latitude, longitude]);
