Beautified all the code

--- a/views/randomNumberAPIWeb.ejs
+++ b/views/randomNumberAPIWeb.ejs
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
-    <title>Random Number API - Michael Grigoryan</title>
-  </head>
-  <body>
-    <div id="container">
-      <!-- Number -->
-      <label for="#number">Number:</label>
-      <pre>
-            <span id="number"></span>
-        </pre>
-      <br />
 
-      <!-- Integer -->
-      <label for="#integer">Integer:</label>
-      <pre>
-            <span id="integer"></span>
-        </pre>
-      <br />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
+  <title>Random Number API - Michael Grigoryan</title>
+</head>
 
-      <!-- API Status -->
-      <br />
-      <label for="#status">API Status:</label>
-      <pre>
-            <span id="status"></span>
+<body>
+  <div id="container">
+    <!-- Number -->
+    <label for="#number">Number:</label>
+    <pre>
+            <span id="number">Loading...</span>
         </pre>
-    </div>
-    <script src="/js/randomNumberAPIWeb/script.min.js"></script>
-  </body>
+    <br />
+
+    <!-- Integer -->
+    <label for="#integer">Integer:</label>
+    <pre>
+            <span id="integer">Loading...</span>
+        </pre>
+    <br />
+
+    <!-- API Status -->
+    <br />
+    <label for="#status">API Status:</label>
+    <pre>
+            <span id="status">Loading...</span>
+        </pre>
+  </div>
+  <script src="/js/randomNumberAPIWeb/script.js"></script>
+</body>
+
 </html>
