--- a/public/css/issAPIWeb/style.css
+++ b/public/css/issAPIWeb/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   max-width: 100;
   height: 100;
   width: 100;
@@ -9,11 +10,11 @@ body, html {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   justify-items: center;
   text-align: center;
   font-family: "Source Code Pro", monospace;
@@ -29,4 +30,5 @@ body, html {
   margin-top: 10px;
   margin-left: 10px;
 }
+
 /*# sourceMappingURL=style.css.map */
