--- a/public/css/issAPIWeb/style.scss
+++ b/public/css/issAPIWeb/style.scss
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   max-width: 100;
   height: 100;
   width: 100;
@@ -11,11 +12,13 @@ body, html {
   text-align: center;
   font-family: "Source Code Pro", monospace;
 }
+
 #map {
   height: 80%;
   margin-right: 10px;
   margin-top: 10px;
 }
+
 #container {
   margin-top: 10px;
   margin-left: 10px;
