--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -1,171 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    />
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/@joergdietrich/leaflet.terminator"></script>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
-    <title>ISS Live Location API - Michael Grigoryan</title>
-  </head>
-  <body>
-    <div id="container">
-      <!-- Longitude -->
-      <label for="#longitude">Longitude</label>
-      <pre>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/@joergdietrich/leaflet.terminator"></script>
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" href="/css/issAPIWeb/style.css" />
+  <title>ISS Live Location API - Michael Grigoryan</title>
+</head>
+
+<body>
+  <div id="container">
+    <!-- Longitude -->
+    <label for="#longitude">Longitude</label>
+    <pre>
             <span id="longitude">Loading...</span>
         </pre>
-      <br />
+    <br />
 
-      <!-- Latitude -->
-      <label for="#latitude">Latitude</label>
-      <pre>
+    <!-- Latitude -->
+    <label for="#latitude">Latitude</label>
+    <pre>
             <span id="latitude">Loading...</span>
         </pre>
 
-      <br />
+    <br />
 
-      <!-- Timestamp -->
-      <label for="#timestamp">Timestamp</label>
-      <pre>
+    <!-- Timestamp -->
+    <label for="#timestamp">Timestamp</label>
+    <pre>
             <span id="timestamp">Loading...</span>
         </pre>
 
-      <br />
-
-      <!-- API Status -->
-      <label for="#status">API Status</label>
-      <pre>
-              <span id="status">Loading...</span>
-        </pre>
-    </div>
-
     <br />
 
-    <div
-      id="map-container"
-      style="position: absolute; width: 50%; top: 0; right: 0; height: 100%"
-    >
-      <div id="map"></div>
-    </div>
-    <div
-      id="map-info"
-      style="
+    <!-- API Status -->
+    <label for="#status">API Status</label>
+    <pre>
+              <span id="status">Loading...</span>
+        </pre>
+  </div>
+
+  <br />
+
+  <div id="map-container" style="position: absolute; width: 50%; top: 0; right: 0; height: 100%">
+    <div id="map"></div>
+  </div>
+  <div id="map-info" style="
         position: absolute;
         right: 0;
         bottom: 0;
         margin-right: 320px;
         margin-bottom: 100px;
-      "
-    >
-      Initializing the Map
-    </div>
+      ">
+    Initializing the Map
+  </div>
 
-    <div
-      id="iframe-container"
-      style="
+  <div id="iframe-container" style="
         position: absolute;
         bottom: 0;
         margin-bottom: 50px;
         margin-left: 25px;
-      "
-    >
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube-nocookie.com/embed/EEIk7gwjgIM"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-    </div>
+      ">
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EEIk7gwjgIM" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 
-    <h6
-      style="
+  <h6 style="
         position: absolute;
         bottom: 0;
         margin: 0 auto;
         margin-bottom: 25px;
         margin-left: 25px;
-      "
-    >
-      The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
-    </h6>
+      ">
+    The data updates every 10 seconds. &nbsp; <a href="/iss-api">API</a>
+  </h6>
 
-    <script>
-      const longitudeSp = document.getElementById("longitude");
-      const latitudeSp = document.getElementById("latitude");
-      const timestampSp = document.getElementById("timestamp");
-      const apiStatusContSp = document.getElementById("status");
+  <script src="/js/issAPIWeb/script.js"></script>
+</body>
 
-      // Set the initial location of the marker (0,0) with zoom of 4
-      const map = L.map("map").setView([0, 0], 7);
-      L.terminator().addTo(map);
-
-      // Set the icon for the ISS
-      const icon = L.icon({
-        iconUrl:
-          "https://upload.wikimedia.org/wikipedia/commons/d/d0/International_Space_Station.svg",
-        iconSize: [84, 84],
-      });
-
-      // Create a marker constant
-      const marker = L.marker([0, 0], { icon: icon }).addTo(map);
-
-      // Add the OpenStreetMap tiles
-      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        maxZoom: 19,
-        attribution:
-          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-      }).addTo(map);
-
-      async function getISS() {
-        // Make an async request to the API
-        var response = await fetch("/iss-api");
-
-        // Await JSON data
-        var data = await response.json();
-
-        // Set and convert lat and lng to Num type
-        var latitude = Number(data.details.iss_position.latitude);
-        var longitude = Number(data.details.iss_position.longitude);
-
-        latitudeSp.innerHTML = latitude;
-        longitudeSp.innerHTML = longitude;
-        timestampSp.innerHTML = Number(data.details.timestamp);
-        apiStatusContSp.innerHTML = data.apiStatus;
-
-        // Recenter the ISS marker every time it changes positions
-        map.flyTo([latitude, longitude]);
-
-        // Set the lat and lng every time they change
-        marker.setLatLng([latitude, longitude]);
-      }
-
-      function sleep(ms) {
-        return new Promise((resolve) => setTimeout(resolve, ms));
-      }
-
-      async function changeMapInfoText() {
-        await sleep(10000);
-        document.getElementById("map-info").innerHTML = "Initialized";
-        await sleep(5000);
-        document.getElementById("map-info").innerHTML = "";
-      }
-
-      // Auto update every 10 seconds
-      changeMapInfoText();
-      setInterval(getISS, 10000);
-      console.log("%cConnected to the Server", "color: lightgreen");
-    </script>
-  </body>
 </html>
