Improved mobile support

--- a/views/issAPIWeb.ejs
+++ b/views/issAPIWeb.ejs
@@ -57,7 +57,7 @@
         margin-right: 320px;
         margin-bottom: 100px;
       ">
-    Initializing the Map
+    <h5>Initializing the Map</h5>
   </div>
 
   <div id="iframe-container" style="
@@ -66,7 +66,7 @@
         margin-bottom: 50px;
         margin-left: 25px;
       ">
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EEIk7gwjgIM" frameborder="0"
+    <iframe class="video-feed" width="560" height="315" src="https://www.youtube-nocookie.com/embed/EEIk7gwjgIM" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
